--- a/admin/style.css
+++ b/admin/style.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Merriweather+Sans:wght@300;400;500;600&display=swap');
 
 :root {
-    --main-color: #22BAA0;
+    --main-color: #34425A;
     --color-dark: #34425A;
     --text-grey: #B0B0B0;
 }
